--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: 'Comic Sans MS';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
